--- a/css/style.css
+++ b/css/style.css
@@ -565,6 +565,8 @@ button {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
+  transition-duration: 250ms;
+  transition-timing-function: linear;
 }
 .backdrop.is-hidden {
   opacity: 0;
