--- a/css/style.css
+++ b/css/style.css
@@ -565,12 +565,16 @@ button {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
-  transition-duration: 250ms;
-  transition-timing-function: linear;
+  transition: all 0.8s ease 0s;
+  
 }
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
+  
+}
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.1)
 }
 .modal {
   position: absolute;
@@ -583,6 +587,11 @@ button {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  
+  transform: translate(-50%, -50%) scale(1);
+  transition: 250ms cubic-bezier(.17,.67,.83,.67);
+  
+  
 }
 .btn-backdrop {
   position: absolute;
