--- a/css/style.css
+++ b/css/style.css
@@ -565,7 +565,8 @@ button {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
-  
+   opacity: 1;
+  transition: all 0.8s ease 0s;
   
 }
 .backdrop.is-hidden {
@@ -573,7 +574,9 @@ button {
   pointer-events: none;
   
 }
-
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.1);
+}
 .modal {
   position: absolute;
   top: 50%;
@@ -585,9 +588,8 @@ button {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  
- 
-  
+  transform: translate(-50%, -50%) scale(1);
+  transition: 250ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
   
 }
 .btn-backdrop {
